k8s-manifests/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-rest-api
  name: go-rest-api
spec:
  selector:
    matchLabels:
      app: go-rest-api
  template:
    spec:
      containers:
      - env:
        - name: SERVICE_ENVIRONMENT
          value: production
        name: go-rest-api
