k8s-manifests/prod/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-rest-api
spec:
  rules:
    - host: go-rest-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-rest-api
                port:
                  number: 80
